--- a/ai.html
+++ b/ai.html
@@ -4,13 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Image Generator</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #1e1e1e;
+            color: white;
+            padding: 20px;
+        }
+        h1 {
+            margin-bottom: 20px;
+        }
+        input {
+            width: 60%;
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #555;
+            border-radius: 5px;
+            outline: none;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        img {
+            margin-top: 20px;
+            max-width: 80%;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
+        }
+    </style>
 </head>
 <body>
     <h1>AI Image Generator</h1>
-    <input type="text" id="prompt" placeholder="Enter a prompt...">
-    <button onclick="generateImage()">Generate</button>
+    <input type="text" id="prompt" placeholder="Enter a prompt (No realism or people)">
     <br>
-    <img id="image" width="400">
+    <button onclick="generateImage()">Generate Image</button>
+    <br>
+    <img id="image" style="display:none;">
 
     <script>
         async function generateImage() {
@@ -31,9 +71,10 @@
             });
 
             const data = await response.json();
-            document.getElementById("image").src = data.data[0].url;
+            const imageElement = document.getElementById("image");
+            imageElement.src = data.data[0].url;
+            imageElement.style.display = "block";
         }
     </script>
 </body>
 </html>
-
