--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <div class="container">
         <h1>AI Image Generator</h1>
+        <input type="text" id="prompt" placeholder="Enter a theme (e.g., 'Fire and Ice')">
+        <button onclick="generateImage()">Generate Image</button>
         <canvas id="canvas" width="512" height="512"></canvas>
-        <button onclick="generateImage()">Generate Abstract Art</button>
     </div>
     <script src="script.js"></script>
 </body>
